# wcdx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  wcdx.sln  wcdx.vcxproj  wcdx.vcxproj.filters
cmake/: VersionInfo.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake  version.rc.in
doc/: cachedimage.txt  image layout.txt
include/: .gitignore  iwcdx.idl  wcdx.h
iolib/: CMakeLists.txt
iolib/include/iolib/: error.h  file_stream.h  stream.h  string_view.h  types.h
iolib/src/: file_stream.cpp  stream.cpp  string_view.cpp
libs/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/image/include/image/: image.h  resources.h
libs/image/res/: GAME.PAL  wc2.pal
libs/image/res/Win32/: resources.rc
libs/image/src/: image.cpp
patchmusic/: CMakeLists.txt  patchmusic.vcxproj  patchmusic.vcxproj.filters
patchmusic/src/: main.cpp
src/: .gitignore  common.h  wcdx.cpp  wcdx.h  window.h
test/: CMakeLists.txt  test.vcxproj  test.vcxproj.filters
test/res/: resources.h
test/src/: common.h  main.cpp  platform.h
tests/: CMakeLists.txt
tests/test/: CMakeLists.txt
tests/test/res/: resources.rc
tests/test/src/: main.cpp  platform.h
tools/: CMakeLists.txt
tools/wcimg/: CMakeLists.txt
tools/wcimg/res/Win32/: resources.rc
tools/wcimg/src/: main.cpp
tools/wcjukebox/: CMakeLists.txt
tools/wcjukebox/src/: dsound_error.cpp  dsound_error.h  dsound_player.cpp  dsound_player.h  main.cpp  player.h  wav_file.cpp  wav_file.h  wave.cpp  wcaudio_stream.cpp  wcaudio_stream.h
tools/wcjukebox/src/windows/: wave.cpp
tools/wcres/: CMakeLists.txt
tools/wcres/src/: main.cpp
wcdx/: CMakeLists.txt
wcdx/idl/: iwcdx.idl
wcdx/src/: common.h  main.cpp  platform.h  resource.h  wcdx.cpp  wcdx.h  window.h
wcpatch/: CMakeLists.txt  wcpatch.vcxproj  wcpatch.vcxproj.filters
wcpatch/res/: SM1.dif  SM2.dif  SO1.dif  SO2.dif  TRANSFER.dif  Wing1.dif  Wing2.dif  resources.h
wcpatch/res/Win32/: resources.h  resources.rc
wcpatch/src/: common.h  main.cpp  md5.h  resource_stream.h
wcpatch/src/Win32/: md5.cpp  platform.cpp  platform.h  resource_stream.cpp  windows_error.cpp  windows_error.h
wcpatch/src/iolib/: error.h  file_stream.cpp  file_stream.h  stream.cpp  stream.h  string_view.cpp  string_view.h  types.h
